[gd_scene load_steps=11 format=2]

[ext_resource path="res://RacingGame/Car.tscn" type="PackedScene" id=1]
[ext_resource path="res://RacingGame/Level.gd" type="Script" id=2]
[ext_resource path="res://RacingGame/StraightRoad.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/RacingGame/Car.png" type="Texture" id=4]
[ext_resource path="res://Assets/RacingGame/lifebar_bg.png" type="Texture" id=5]
[ext_resource path="res://Assets/RacingGame/lifebar_fill.png" type="Texture" id=6]
[ext_resource path="res://Assets/FallGame/Fonts/Kenney Pixel.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/Music/mainTheme.wav" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 264, 24 )

[sub_resource type="DynamicFont" id=2]
size = 75
font_data = ExtResource( 7 )

[node name="Level" type="Node2D"]
script = ExtResource( 2 )

[node name="GasCans" type="Node" parent="."]

[node name="RegenArea" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 200 )
z_index = 2
collision_layer = 4
collision_mask = 3
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="RegenArea"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="RegenArea"]
position = Vector2( 4, 0 )
scale = Vector2( 13.25, 1 )
texture = ExtResource( 4 )

[node name="Car" parent="." instance=ExtResource( 1 )]
rotation = -1.5708
z_index = 1

[node name="MainTheme" type="AudioStreamPlayer2D" parent="Car"]
rotation = 1.5708
stream = ExtResource( 8 )
volume_db = -6.0

[node name="Camera2D" type="Camera2D" parent="Car"]
rotation = 1.5708
current = true
zoom = Vector2( 1.15, 1.15 )
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 8.0
drag_margin_top = 0.0
drag_margin_bottom = 0.25

[node name="Roads" type="Node" parent="."]

[node name="StraightRoad" parent="Roads" instance=ExtResource( 3 )]
position = Vector2( 0, 256 )

[node name="StraightRoad2" parent="Roads" instance=ExtResource( 3 )]
position = Vector2( -256, 492 )
rotation = 1.5708

[node name="StraightRoad3" parent="Roads" instance=ExtResource( 3 )]
position = Vector2( -768, 488 )
rotation = 1.5708

[node name="StraightRoad4" parent="Roads" instance=ExtResource( 3 )]
position = Vector2( 256, 496 )
rotation = 1.5708

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GasBar" type="TextureProgress" parent="CanvasLayer"]
margin_right = 192.0
margin_bottom = 40.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
tint_under = Color( 1, 0, 0, 1 )
tint_progress = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="CanvasLayer"]
margin_top = 70.0
margin_right = 396.0
margin_bottom = 123.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
margin_top = 150.0
margin_right = 208.0
margin_bottom = 164.0
custom_fonts/font = SubResource( 2 )
text = "test"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1228.8, 720 )

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground/ParallaxLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
rect_scale = Vector2( 1.2, 1.2 )
color = Color( 0.976471, 0.552941, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="RegenArea" to="." method="_on_Area2D_body_entered"]
[connection signal="game_over" from="Car" to="." method="_on_game_over"]
